--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/go,goland,goland+all
 /Update-linux
 /log/*.log
+/tmp
